<resources>
    <string name="app_name">领贝钱包</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name = "ok">确认</string>
    <string name = "esc">取消</string>

    <string name="forget_pwd_title">忘记密码</string>
    <string name="forget_et_phone">手机号码</string>
    <string name="forget_et_code">验证码</string>
    <string name="forget_bt_getcode">获取验证码</string>
    <string name="forget_et_idcard">身份证号</string>
    <string name="forget_et_newpwd">新密码</string>
    <string name="forget_et_newpwd2">确认新密码</string>
    <string name="forget_bt_submit">确认修改</string>

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>


    <string name="register_success">小米服务注册成功</string>
    <string name="register_fail">小米推送注册失败.</string>
    <string name="recv_passthrough_message"> 收到一个传递消息. Content is \"%1$s\"</string>
    <string name="click_notification_message"> 点击通知消息. Content is \"%1$s\"</string>
    <string name="arrive_notification_message"> 接收到传输数据： \"%1$s\"</string>
    <string name="set_alias_success"> 设置别名 \"%1$s\" 成功.</string>
    <string name="set_alias_fail"> 设置别名失败 %1$s.</string>
    <string name="unset_alias_success"> Unset alias \"%1$s\" success.</string>
    <string name="unset_alias_fail"> Unset alias fail for %1$s.</string>
    <string name="set_account_success"> Set account \"%1$s\" success.</string>
    <string name="set_account_fail"> Set account fail for %1$s.</string>
    <string name="unset_account_success"> Unset account \"%1$s\" success.</string>
    <string name="unset_account_fail"> Unset account fail for %1$s.</string>
    <string name="subscribe_topic_success"> Subscribe topic \"%1$s\" success.</string>
    <string name="subscribe_topic_fail"> Subscribe topic fail for %1$s.</string>
    <string name="unsubscribe_topic_success"> Unsubscribe topic \"%1$s\" success.</string>
    <string name="unsubscribe_topic_fail"> Unsubscribe topic fail for %1$s.</string>
    <string name="set_accept_time_success"> Set accept time %1$s - %2$s success.</string>
    <string name="set_accept_time_fail"> Set accept time fail for %1$s.</string>

    <string name="login_phone_tvt">账号</string>
    <string name="login_pwd_tvt">密码</string>
    <string name="login_forgetpwd_tvt">忘记登录密码？使用 <font color='white'>重置密码</font></string>
    <string name="login_sumbit_btn">登录</string>
    <string name="login_register_btn">注册</string>
    <string name="app_rights">Copyright ⓒ All Rights Linkpay(2013-2016)版权所有</string>

    <string name="register_phone_hint">请输入手机号</string>
    <string name="register_pwd_hint">请输入密码</string>
    <string name="register_repwd_hint">确认密码</string>
    <string name="register_procsn_hint">请输入台码</string>
    <string name="register_code_hint">输入校验码</string>
    <string name="register_code_btn">获取短信校验码</string>

    <string name="forgetpwd_phone_hint">请输入手机号</string>
    <string name="forgetpwd_pwd_hint">请输入密码</string>
    <string name="forgetpwd_repwd_hint">确认密码</string>
    <string name="forgetpwd_code_hint">输入校验码</string>
    <string name="forgetpwd_code_btn">获取短信校验码</string>

    <string name="updatepwd_oldpwd_hint">请输入旧密码</string>
    <string name="updatepwd_newpwd_hint">请输入新密码</string>
    <string name="updatepwd_repwd_hint">确认密码</string>

    <string name="home_title">首页</string>
    <string name="home_bill">账单查询</string>
    <string name="home_qrcode">我的台码</string>
    <string name="home_share">推荐好友</string>
    <string name="home_nocardpay">无卡支付</string>

    <string name="home_nav_edit">编辑</string>
    <string name="home_nav_exit">退出应用</string>
    <string name="home_nav_idcard">实名认证</string>
    <string name="home_nav_cardid">结算卡信息</string>
    <string name="home_nav_more">更多</string>

    <string name="more_password">密码管理</string>
    <string name="more_loucs">手势密码管理</string>
    <string name="more_update">检查更新</string>
    <string name="more_human">联系客服</string>
    <string name="more_about">关于领贝钱包</string>

    <string name="addcard_phone">银行预留手机号码</string>
    <string name="addcard_cardnum">请输入银行卡号</string>
    <string name="addcard_expdate">有效期(月/年)</string>
    <string name="addcard_cvn2">CVN2(卡背面后3位数字)</string>
    <string name="addcard_money">请输入支付金额(￥):</string>






</resources>
