<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_e8"
    android:orientation="vertical">

    <include layout="@layout/view_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/register_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/register_et_h"
            android:background="@drawable/btn_wg"
            android:hint="@string/register_phone_hint"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="@dimen/et_text_size" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/transparent" />

        <EditText
            android:id="@+id/register_pwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/register_et_h"
            android:background="@drawable/btn_wg"
            android:hint="@string/register_pwd_hint"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="@dimen/et_text_size" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/transparent" />

        <EditText
            android:id="@+id/register_repwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/register_et_h"
            android:background="@drawable/btn_wg"
            android:hint="@string/register_repwd_hint"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="@dimen/et_text_size" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/transparent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/register_et_h"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/register_procsn"
                android:layout_width="0dp"
                android:layout_height="@dimen/register_et_h"
                android:layout_weight="1"
                android:background="@drawable/btn_wg"
                android:hint="@string/register_procsn_hint"
                android:inputType="number"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textSize="@dimen/et_text_size" />

            <ImageView
                android:onClick="GetQRCode"
                android:layout_width="@dimen/register_et_h"
                android:layout_height="@dimen/register_et_h"
                android:background="@drawable/btn_wg"
                android:scaleType="centerInside"
                android:src="@drawable/ic_qrcode" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/transparent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/register_et_h"
            android:background="@color/white"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/register_code"
                android:layout_width="match_parent"
                android:layout_height="@dimen/register_et_h"
                android:layout_weight="3"
                android:background="@drawable/btn_wg"
                android:hint="@string/register_code_hint"
                android:inputType="number"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textSize="@dimen/et_text_size" />

            <ImageView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/gray_e8" />

            <TextView
                android:id="@+id/register_code_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/btn_wg"
                android:gravity="center"
                android:onClick="GetSMSCode"
                android:paddingLeft="20dp"
                android:text="@string/register_code_btn"
                android:textColor="@color/black"
                android:textSize="@dimen/et_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="点击注册表示同意"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="《用户服务协议》"
                android:textColor="@color/style_color"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="及"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="《隐私条款》"
                android:textColor="@color/style_color"
                android:textSize="12sp" />
        </LinearLayout>

        <Button
            android:id="@+id/register_sumbit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/yuanjiao_style"
            android:onClick="Register"
            android:text="@string/login_register_btn"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>


</LinearLayout>