<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_ayout"
    android:layout_width="match_parent"
    android:background="@color/gray_e8"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/view_title_bar" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/updatepwd_oldpwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/register_et_h"
            android:background="@color/white"
            android:hint="@string/updatepwd_oldpwd_hint"
            android:inputType="textPassword"
            android:maxLength="11"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="@dimen/et_text_size" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/transparent" />

        <EditText
            android:id="@+id/updatepwd_newpwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/register_et_h"
            android:background="@color/white"
            android:hint="@string/updatepwd_newpwd_hint"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="@dimen/et_text_size" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/transparent" />

        <EditText
            android:id="@+id/updatepwd_repwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/register_et_h"
            android:background="@color/white"
            android:hint="@string/updatepwd_repwd_hint"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="@dimen/et_text_size" />


        <Button

            android:layout_marginTop="40dp"
            android:onClick="UpdatePWD"
            android:id="@+id/forgetpwd_sumbit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/yuanjiao_style"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>